--- a/src/Makefile
+++ b/src/Makefile
@@ -4,13 +4,13 @@
 DEVICE      = attiny261
 CLOCK      = 1000000
 PROGRAMMER = -c avrisp2 
-OBJECTS    = main.o lis3dh_reg.o USI_TWI_Master.o TinyWireM.o
+OBJECTS    = main.o TinyWireM.o USI_TWI_Master.o lis3dh_reg.o
 
 main.o : main.cpp alphabet.h TinyWireM.h lis3dh_reg.h
 
 lis3dh_reg.o : lis3dh_reg.c USI_TWI_Master.h
 
-USI_TWI_Master.o : USI_TWI_Master.cpp 
+USI_TWI_Master.o : USI_TWI_Master.cpp
 
 TinyWireM.o : TinyWireM.cpp USI_TWI_Master.h TinyWireM.h
 
