Working and compiling lis3dh library, doesn't fit in space...

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -3,6 +3,7 @@
         "cinttypes": "cpp",
         "cstdint": "cpp",
         "cstddef": "cpp",
-        "lis3dh_reg.h": "c"
+        "lis3dh_reg.h": "c",
+        "usi_twi_master.h": "c"
     }
 }
