--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,32 @@
 **-cache.lib
-**.bak
-**.kicad_pcb-bak
 **/.svg2shenzhen-cache
+**/src/build
+**/src/Debug
+
+
+# Temporary files
+*.000
+*.bak
+*.bck
+*.kicad_pcb-bak
+*.kicad_sch-bak
+*.kicad_prl
+*.sch-bak
+*~
+_autosave-*
+*.tmp
+*-save.pro
+*-save.kicad_pcb
+fp-info-cache
+*-backups
+
+# Netlist files (exported from Eeschema)
+*.net
+
+# Autorouter files (exported from Pcbnew)
+*.dsn
+*.ses
+
+# Exported BOM files
+*.xml
+*.csv
