Deleted kicad session file, tested image_to_laser

--- a/design/business_card/.gitignore
+++ b/design/business_card/.gitignore
@@ -1,10 +1,5 @@
-**-cache.lib
-**/.svg2shenzhen-cache
-**/design/business_card/build
-**/src/Debug
-*.idea
-*.vscode
-*.vs
+# For PCBs designed using KiCad: http://www.kicad-pcb.org/
+# Format documentation: http://kicad-pcb.org/help/file-formats/
 
 # Temporary files
 *.000
@@ -20,7 +15,6 @@ _autosave-*
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
-*-backups
 
 # Netlist files (exported from Eeschema)
 *.net
@@ -33,4 +27,19 @@ fp-info-cache
 *.xml
 *.csv
 
-__pycache__
+*-bak
+*-cache*
+*-bak*
+_autosave*
+
+
+# Legacy files
+*.pro
+*.sch
+*.lib
+*.dcm
+*-cache.lib
+*.brd
+*.mod
+*.kicad_prl
+*.zip
